# netology_home_work_22

./: README.md
GreeterStaticLib/: GreeterStaticLib.slnx
GreeterStaticLib/GreeterClient/: GreeterClient.cpp  GreeterClient.vcxproj  GreeterClient.vcxproj.filters
GreeterStaticLib/GreeterClient/x64/Debug/: GreeterClient.exe.recipe  GreeterClient.ilk  vc145.idb
GreeterStaticLib/GreeterClient/x64/Debug/GreeterClient.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GreeterStaticLib/GreeterStaticLib/: Greeter.cpp  Greeter.h  GreeterStaticLib.vcxproj  GreeterStaticLib.vcxproj.filters
GreeterStaticLib/GreeterStaticLib/x64/Debug/GreeterStaticLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GreeterStaticLib.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
GreeterStaticLib/x64/Debug/: GreeterStaticLib.idb  GreeterStaticLib.lib
LeaverDinamicLib/: LeaverDinamicLib.slnx
LeaverDinamicLib/Leaver/: Leaver.cpp  Leaver.vcxproj  Leaver.vcxproj.filters
LeaverDinamicLib/Leaver/x64/Debug/: Leaver.exe.recipe  Leaver.ilk  vc145.idb
LeaverDinamicLib/Leaver/x64/Debug/Leaver.tlog/: CL.command.1.tlog  (+8 more)
LeaverDinamicLib/LeaverDinamicLib/: Leaver.cpp  Leaver.h  LeaverDinamicLib.vcxproj
LeaverDinamicLib/LeaverDinamicLib/x64/Debug/: LeaverDinamicLib.dll.recipe  LeaverDinamicLib.ilk  vc145.idb
LeaverDinamicLib/x64/Debug/: LeaverDinamicLib.exp  LeaverDinamicLib.lib
LeaverLib/: CMakeLists.txt  Leaver.cpp  LeaverLib.cpp
(+8 files in other folders)
